tests/baselines/reference/parserModifierOnStatementInBlock3.errors.txt
parserModifierOnStatementInBlock3.ts(2,4): error TS1184: Modifiers cannot appear here.


==== parserModifierOnStatementInBlock3.ts (1 errors) ====
    export function foo() {
       export function bar() {
       ~~~~~~
!!! error TS1184: Modifiers cannot appear here.
       }
    }
    